--- a/PersonalFinanceApiNetCore/appsettings.json
+++ b/PersonalFinanceApiNetCore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=personalfinance;Uid=desarrollo;Pwd=PersonalFinance2025;"
+  }
 }
