--- a/PersonalFinanceApiNetCoreBL/PersonalFinanceApiNetCoreBL.csproj
+++ b/PersonalFinanceApiNetCoreBL/PersonalFinanceApiNetCoreBL.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PersonalFinanceApiNetCoreDataMapper\PersonalFinanceApiNetCoreDataMapper.csproj" />
     <ProjectReference Include="..\PersonalFinanceApiNetCoreModel\PersonalFinanceApiNetCoreModel.csproj" />
   </ItemGroup>
 
