--- a/PersonalFinanceApiNetCoreDataMapper/PersonalFinanceApiNetCoreDataMapper.csproj
+++ b/PersonalFinanceApiNetCoreDataMapper/PersonalFinanceApiNetCoreDataMapper.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalFinanceApiNetCoreModel\PersonalFinanceApiNetCoreModel.csproj" />
+  </ItemGroup>
+
 </Project>
