--- a/PersonalFinanceApiNetCore/web.config
+++ b/PersonalFinanceApiNetCore/web.config
@@ -20,6 +20,9 @@
 			<handlers>
 				<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
 				<remove name="WebDAVModule" />
+				<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+				<remove name="OPTIONSVerbHandler" />
+				<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 			</handlers>
 			<aspNetCore processPath="dotnet" arguments=".\PersonalFinanceApiNetCore.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 		</system.webServer>
